updated docs and fixed some routes
